@@ -1,3 +1,4 @@
+* Add Python3 support
 * Add do button on stock move form & list
 * Add warehouse address on internal shipment
 
